force-app/main/default/objects/Document_Checklist_Header__c/Document_Checklist_Header__c.object-meta.xml
<CustomObject>
    <description>The container object for storing all the rejected document checklist recrods.</description>
    <label>Document Checklist Header</label>
    <nameField>
        <label>Document Checklist Header Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Checklist Headers</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>