force-app/main/default/objects/Document_Checklist_Header__c/fields/Application_Booking__c.field-meta.xml
<CustomField>
    <fullName>Application_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application / Booking</label>
    <referenceTo>PropStrength__Application_Booking__c</referenceTo>
    <relationshipLabel>Document Checklist Headers</relationshipLabel>
    <relationshipName>Document_Checklist_Headers</relationshipName>
    <type>Lookup</type>
</CustomField>