force-app/main/default/objects/Document_Checklist_Header__c/fields/Reason_For_Rejection_L2__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Rejection_L2__c</fullName>
    <label>Reason For Rejection L2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>