force-app/main/default/objects/Document_Checklist_Header__c/fields/Rejection_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Remarks__c</fullName>
    <label>Additional Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>